# minishell

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  bash_debugger  bash_debugger.c  bash_output  bash_output.c  char_classification.c  char_classification.h  execute.c  expander.c  handler.c  lexer.c  lexer_utils.c  main.c  minishell  minishell.h  minishell_demo  parser.c  parser.h  splitter.c  syntax_analyzer.c  test.c  testfile  unquote.c  utils.c  utils.h
builtin/: builtin.c  cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
env/: env.c  env_utils.c
execute/: execute.c  find_path.c
expander/: expander.c  expander_nonvariables.c
get_next_line/: get_next_line.c  get_next_line.h
includes/: char_classification.h  env.h  minishell.h  state_typedef.h  utils.h
lexer/: lexer.c  lexer_utils.c  syntax_analyzer.c  unquote.c  utils.c
libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_isalnum.c.orig  ft_isascii.c  ft_isdigit.c  ft_isprint.c.orig  ft_itoa.c  ft_itoa.c.orig  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c.orig  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c.orig  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c.orig  ft_putstr_fd.c  ft_split.c.orig  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c.orig  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c.orig  ft_strrchr.c.orig  ft_strtrim.c  ft_substr.c  ft_toupper.c  (+1 more)
libft2/: ft_bzero.c  ft_isalpha.c  ft_lstclear.c  ft_lstnew.c  ft_memcpy.c  ft_tolower.c
(+111 files in other folders)
